# roboamo

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  _report.txt  benchmark.sh  build.sh  dx.json  index.html  input.css  tailwind.config.js  test.db
.github/: pre-commit
.github/workflows/: deploy.yml
assets/: roboamo-0451fbdd30b21367.js  roboamo-0451fbdd30b21367.js.br  roboamo-05f347a48f7a21a3.js  roboamo-05f347a48f7a21a3.js.br  roboamo-22940f656ac00941.js  roboamo-22940f656ac00941.js.br  roboamo-3406cc66e0362fef.js  roboamo-3406cc66e0362fef.js.br  roboamo-674761c47dd24654.js  roboamo-674761c47dd24654.js.br  roboamo-6879637a0c1b4fad.js  roboamo-6879637a0c1b4fad.js.br  roboamo-7deb35dbcb1e4f11.js  roboamo-7deb35dbcb1e4f11.js.br  roboamo-8d954a1383884b68.js  roboamo-8d954a1383884b68.js.br  roboamo-98f5dd23f4f8b513.js  roboamo-98f5dd23f4f8b513.js.br  roboamo-9f8cfb549d372c87.js  roboamo-9f8cfb549d372c87.js.br  roboamo-9f96be654c66082c.js  roboamo-9f96be654c66082c.js.br  roboamo-a43c7ef43ff6c362.js  roboamo-a43c7ef43ff6c362.js.br  roboamo-a841a47a09375b91.js  roboamo-a841a47a09375b91.js.br  roboamo-b0c4616e9c3ea525.js  roboamo-b0c4616e9c3ea525.js.br  roboamo-b48926dc5e127ed9.js  roboamo-b48926dc5e127ed9.js.br  roboamo-b6632044a8b5517d.js  roboamo-b6632044a8b5517d.js.br  roboamo-bac0c1493bf615b3.js  roboamo-bac0c1493bf615b3.js.br  roboamo-c7c54e2482e2ad2d.js  roboamo-c7c54e2482e2ad2d.js.br  roboamo-c8bb96d57a1c06b7.js  roboamo-c8bb96d57a1c06b7.js.br  roboamo-e0aa2ab4d0d050a0.js  roboamo-e0aa2ab4d0d050a0.js.br  (+128 more)
assets/demo/: demoasm.xlsx  demofltmps.xlsx  demoqualtable.csv  demoteams.csv
data/: people.csv  teams.csv
src/: README.md  asm_parser.rs  csv_funcs.rs  database.rs  lib.rs  main.rs
src/components/: analysis_date_bar.rs  footer.rs  hero.rs  interaction_bar.rs  mod.rs  player_card.rs  preview.rs  progressbar.rs  search_bar.rs
src/engine/: assignment.rs  builder.rs  djikstra.rs  flow_graph.rs  mod.rs  person.rs  team.rs
src/utilities/: config.rs  error_handling.rs  export.rs  import.rs  mod.rs  parsing.rs
src/views/: error_display.rs  file_upload.rs  home.rs  mod.rs  navbar.rs  results.rs  roadmap.rs
(+7 files in other folders)
