[package]
name = "roboamo"
version = "0.1.0"
edition = "2024"

[dependencies]
calamine = "0.25.0"
chrono = "0.4.41"
clap = { version="4.5.38", features = ["derive"] }
colorize = "0.1.0"
csv = "1.3"
once_cell = "1.21.3"
rayon = "1.10.0"
regex = "1.11.1"
rusqlite = { version="0.36.0", features=["chrono"] }
